// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateConfigs.constructConfig with environment 1`] = `
Object {
  "environment": "uat",
  "featureFlags": Object {},
  "host": "testTenant.e.sparkpost.com",
  "smtpAuth": Object {
    "enabled": true,
    "port": 587,
    "username": "testTenant",
  },
  "tenantId": "testTenant",
}
`;

exports[`generateConfigs.constructConfig with unknown environment 1`] = `
Object {
  "featureFlags": Object {},
  "host": "testTenant.e.sparkpost.com",
  "smtpAuth": Object {
    "enabled": true,
    "port": 587,
    "username": "testTenant",
  },
  "tenantId": "testTenant",
}
`;
